yamls/kask/service_kask-release-name.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kask
    chart: kask-0.1.1
    heritage: Helm
    release: RELEASE-NAME
  name: kask-RELEASE-NAME
spec:
  ports:
  - name: http
    port: 8081
    protocol: TCP
  selector:
    app: kask
    release: RELEASE-NAME
    routed_via: RELEASE-NAME
  type: NodePort
