yamls/kask/networkpolicy_kask-release-name.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: kask
    chart: kask-0.1.1
    heritage: Helm
    release: RELEASE-NAME
  name: kask-RELEASE-NAME
spec:
  ingress:
  - ports:
    - port: 8081
      protocol: TCP
  podSelector:
    matchLabels:
      app: kask
      release: RELEASE-NAME
  policyTypes:
  - Ingress
